@@ -611,7 +611,6 @@
     }
 },
 
-
 {
     "pk": 1,
     "model": "wagtailcore.site",
